[package]
authors = ["Marcus Medom Ryding <mrok4a@gmail.com>"]
categories = ["data-structures"]
license = "MIT"
name = "persistent-vector"
readme = "README.md"
repository = "https://github.com/Magnap/persistent-vector-rs"
version = "0.1.0"

[dependencies]

[features]
default = []
narrow_branching = []
